--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="encabezado">
             <button class="btn-icono btn-menu">☰</button>
             <h1>Google Classroom</h1>
-            <img class="avatar" src="/Practica 2/src/a.jpg" alt="Avatar de usuario">
+            <img class="avatar" src="./src/a.jpg" alt="Avatar de usuario">
             <button class="btn-icono btn-opciones">⋮</button>
         </div>
 
